ajout 2eme section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                     <p>RN</p>
                 </div>
                 <div class="borddroit">
-                    <img src="image/—Pngtree—magnifying glass for commercial elements_4095332.png" alt="loupe">
+                    <div class="loupe loupe1"></div>
+                    <div class="loupe loupe2"></div>
                     <div class="menu">
                         <menu>Menu</menu>
                     </div>
@@ -36,7 +37,7 @@
                     velit explicabo odio iure nihil.</p>
             </div>
         </div>
-        
+
         <div class="lien">
             <p class="scroll">scroll</p>
             <div class="barreScroll"></div>
@@ -47,25 +48,50 @@
                 <a href="#"><img class="twitter" src="/image/Vector.png" alt="facebook"></a>
             </div>
             <div>
-            <a href="#"><img class="insta1" src="/image/Vector(2).png" alt="instagram">
-                        <img class="insta2" src="/image/Vector(3).png" alt="instagram">
-            </a>
+                <a href="#"><img class="insta1" src="/image/Vector(2).png" alt="instagram">
+                    <img class="insta2" src="/image/Vector(3).png" alt="instagram">
+                </a>
             </div>
         </div>
         <div class="bagroundlinear"></div>
     </div>
     <div class="container2">
         <div class="titrepartie2">
-            <h2>Réservé votre rando</h2>
-            <div class="textpartie2"><p>Notre équipe s’occupe de tout, vous réservé et c’est tout.
-                Les informations pour votre randonées seront envoyée à vous
-                et vos convives.</p></div>
-        </div> 
-        <div class="listepartie2"> 
+            <h2 class="titreRando">Réservé votre rando</h2>
+            <div class="textpartie2">
+                <p>Notre équipe s’occupe de tout, vous réservé et c’est tout.
+                    Les informations pour votre randonées seront envoyée à vous
+                    et vos convives.</p>
+            </div>
+        </div>
+        <div class="listepartie2">
             <div class="liste1">La Dune du pillat</div>
             <div class="liste2">Les cevennes by night</div>
             <div class="liste3">Les pyrénées</div>
-            <div class="liste4">Forêt des Vosges</div>  
+            <div class="liste4">Forêt des Vosges</div>
+        </div>
+    <div class="imageDune">
+        <img class="dune" src="/image/joe-mania-tyAAl6r_c2U-unsplash 1.png" alt="dune de sable">
+        <div class="carre carre1">
+            <div class="fleche fleche-gauche"></div>
+            <div class="ligne ligne-gauche"></div>
+        </div>
+        <div class="carre carre2">
+            <div class="fleche fleche-droite"></div>
+            <div class="ligne ligne-droite"></div>
+        </div>
+    </div>
+       <div class="textCotéPhoto"> 
+        <h2 class="titreDune">La dune du pilat</h2>
+        <p>Ornare vivamus molestie pellentesque nunc. Sed sapien erat ultrices curabitur. Erat id fringilla arcu
+            condimentum fames.</p>
+        <p>Aliquet dictum aliquet faucibus cursus turpis. Suspendisse cum rutrum sit ut sociis. Pellentesque neque orci
+            adipiscing pharetra lacus, dignissim pharetra ipsum blandit. Feugiat quis quam consectetur lectus id quis
+            tortor vel, mattis.</p>
+            <div class="offres">
+                <menu><i>VOIR NOS OFFRES</i></menu>
+                <div class="barreOffre"></div>
+            </div>
         </div>
     </div>
 </body>
